add tag system for clans to integrate better with GD